--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,16 @@
+syno-photo-frame (0.4.0) stable; urgency=low
+  [Piotr Karasinski ]
+  * Add welcome screen
+  * Handle certain types of errors by displaying an error image instead
+    of stopping the app
+  * Support AppTerminating event
+  * Remove cross compilation instructions
+  * Add loging
+  * Add 20s timeout for reqwest client
+  * Improve Makefile
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Wed, 21 Jun 2023 15:00:00 +0200
+
 syno-photo-frame (0.3.1) stable; urgency=low
   [Piotr Karasinski ]
   * Initial version
