--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,5 +1,11 @@
 syno-photo-frame (0.4.0) stable; urgency=low
   [Piotr Karasinski ]
+  * Add `--splash` option
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Thu, 22 Jun 2023 15:00:00 +0200
+
+syno-photo-frame (0.4.0) stable; urgency=low
+  [Piotr Karasinski ]
   * Add welcome screen
   * Handle certain types of errors by displaying an error image instead
     of stopping the app
