--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,9 @@
+syno-photo-frame (0.5.2) stable; urgency=low
+  [Piotr Karasinski ]
+  * Fix package dependencies
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Tue, 24 Oct 2023 12:00:00 +0200
+
 syno-photo-frame (0.5.0) stable; urgency=low
   [Piotr Karasinski ]
   * Add `--splash` option
