--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,9 @@
+syno-photo-frame (0.9.0) stable; urgency=low
+  [Piotr Karasinski ]
+  * Add update notification
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Sat, 13 Jan 2024 12:00:00 +0200
+
 syno-photo-frame (0.8.0) stable; urgency=low
   [Piotr Karasinski ]
   * Add crossfade transition effect and --transition (-t) option
