--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,9 @@
+syno-photo-frame (0.10.0) stable; urgency=low
+  [Piotr Karasinski ]
+  * Add support for password protected albums
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Tue, 23 Jan 2024 12:00:00 +0200
+
 syno-photo-frame (0.9.0) stable; urgency=low
   [Piotr Karasinski ]
   * Add update notification
