--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,9 @@
+syno-photo-frame (0.10.2) stable; urgency=low
+  [Piotr Karasinski ]
+  * Display first photo independently from checking for updates
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Fri, 02 Feb 2024 12:00:00 +0200
+
 syno-photo-frame (0.10.1) stable; urgency=low
   [Piotr Karasinski ]
   * Fix quit event handling
