--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,10 @@
+syno-photo-frame (0.12.0) stable; urgency=low
+  [Piotr Karasinski ]
+  * Add `--rotate` option for screen rotation
+  * Complete overhaul of the update notification
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Sat, 17 Feb 2024 12:00:00 +0200
+
 syno-photo-frame (0.11.0) stable; urgency=low
   [Piotr Karasinski ]
   * Add `--order by-name` and `--random-start`
