--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,9 @@
+syno-photo-frame (0.14.0) stable; urgency=low
+  [Piotr Karasinski ]
+  * Add support for Immich server
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Sat, 21 Dec 2024 12:00:00 +0200
+
 syno-photo-frame (0.13.0) stable; urgency=low
   [Piotr Karasinski ]
   * Add `--background` option to select between blurred or black
