--- a/dpkg/changelog
+++ b/dpkg/changelog
@@ -1,3 +1,10 @@
+syno-photo-frame (0.15.0) stable; urgency=low
+  [Piotr Karasinski ]
+  * Add `--display-photo-info` option, enabling display of photo
+    date and location
+
+ -- Piotr-Karasinski <7767011+Caleb9@users.noreply.github.com>  Tue, 28 Oct 2025 12:00:00 +0200
+
 syno-photo-frame (0.14.0) stable; urgency=low
   [Piotr Karasinski ]
   * Add support for Immich server
